you can now invert the button outputs too
use this when connecting the esp8266 directly in paralell to the buttons (not reccomended)

--- a/pc_hardware_remote/data/www/index.html
+++ b/pc_hardware_remote/data/www/index.html
@@ -38,6 +38,7 @@ div.LEDs, div.buttons, div.status {
   border-radius: 5px;
   background-color: #EEE; //#AAA;
   color: #222;
+  user-select: none;
 }
 
 #power_button {
